# knir-6

./: .gitignore  Cargo.toml
benches/: devbench.rs
model_conversion/: requirements.txt  spandrel2onnx.py
shaders/: passthrough.wgsl
src/: algo_scalers.rs  error.rs  gpu_shading.rs  lib.rs  onnx.rs  upscaler.rs  vertex_plane.wgsl
