[package]
name = "scale-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = { version = "2.0.0-rc.4", features = ["ndarray"] }
image = "0.25"
thiserror = "1.0"
ndarray = {version = "0.15", features = ["rayon"] }

[dev-dependencies]
criterion = "^0.5"

[[bench]]
name = "devbench"
harness = false
